appId: com.selvakumaras.workoutplanner
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Start a new workout session"
- waitForAnimationToEnd
- tapOn: "Select workout Session Test 2"
- waitForAnimationToEnd
- assertVisible: "Active Session"
- tapOn: "Start set"
- waitForAnimationToEnd
- tapOn: "Stop and log set"
- waitForAnimationToEnd
- swipe:
    direction: DOWN
    duration: 300
- tapOn: "Complete workout and end session"
- waitForAnimationToEnd
- assertVisible: "Go back to home"
- assertVisible: "Total Time"
- tapOn: "Go back to home"
- waitForAnimationToEnd
- assertVisible: "WorkoutPlanner"
